--- a/Client/package.json
+++ b/Client/package.json
@@ -13,7 +13,9 @@
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
+    "reacticon": "^0.0.1",
     "sass": "^1.69.5"
   },
   "devDependencies": {
