--- a/Client/package.json
+++ b/Client/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
+    "react-full-screen": "^1.1.1",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
     "reacticon": "^0.0.1",
