--- a/Client/package.json
+++ b/Client/package.json
@@ -13,14 +13,18 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
+    "@react-spring/web": "^9.7.3",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
     "react-full-screen": "^1.1.1",
     "react-icons": "^4.12.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.20.1",
+    "react-slick": "^0.29.0",
     "reacticon": "^0.0.1",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
