--- a/Client/package.json
+++ b/Client/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
     "@react-spring/web": "^9.7.3",
+    "@vercel/speed-insights": "^1.0.2",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
