--- a/Client/package.json
+++ b/Client/package.json
@@ -21,9 +21,12 @@
     "react-full-screen": "^1.1.1",
     "react-icons": "^4.12.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
     "react-slick": "^0.29.0",
     "reacticon": "^0.0.1",
+    "redux": "^5.0.0",
+    "redux-thunk": "^3.1.0",
     "sass": "^1.69.5",
     "slick-carousel": "^1.8.1"
   },
