--- a/Client/package.json
+++ b/Client/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-full-screen": "^1.1.1",
     "react-icons": "^4.12.0",
     "react-material-ui-carousel": "^3.4.2",
