--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 MONGODB_URI = mongodb+srv://Phuin:a0918742290@cluster0.lebl5er.mongodb.net/?retryWrites=true&w=majority
 JWTPRIVATEKEY = "jwtPrivateKey"
 SALT = 10
-EMAIL = basphurin2502@gmail.com
-PASS = bznc qnoj tkpb sjev
+EMAIL = lofibtb@gmail.com
+PASS = yctp ukug nitp gwfl
 BASEURL = http://localhost:5173
