--- a/Client/package.json
+++ b/Client/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.0",
     "@react-spring/web": "^9.7.3",
     "@vercel/speed-insights": "^1.0.2",
+    "axios": "^1.6.5",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
