--- a/Client/package.json
+++ b/Client/package.json
@@ -18,6 +18,8 @@
     "@react-spring/web": "^9.7.3",
     "@vercel/speed-insights": "^1.0.2",
     "axios": "^1.6.5",
+    "joi": "^17.12.0",
+    "joi-password-complexity": "^5.2.0",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
