--- a/Client/package.json
+++ b/Client/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.5",
     "joi": "^17.12.0",
     "joi-password-complexity": "^5.2.0",
+    "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
@@ -27,6 +28,7 @@
     "react-full-screen": "^1.1.1",
     "react-icons": "^4.12.0",
     "react-material-ui-carousel": "^3.4.2",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
     "react-slick": "^0.29.0",
