--- a/server/vercel.json
+++ b/server/vercel.json
@@ -3,6 +3,7 @@
   "headers": [
     {
       "source": "/(.*)",
+      "destination": "/api",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Origin", "value": "*" },
