--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,8 +2,7 @@
   "rewrites": [{ "source": "/(.*)", "destination": "/api" }],
   "headers": [
     {
-      "source": "/(.*)",
-      "destination": "/api",
+      "source": "/api",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Origin", "value": "*" },
