--- a/tarot-api/vercel.json
+++ b/tarot-api/vercel.json
@@ -1,5 +1,5 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "app.js" }],
+  "rewrites": [{ "source": "/(.*)", "destination": "/app.js" }],
   "headers": [
     {
       "source": "/(.*)",
