--- a/tarot-api/vercel.json
+++ b/tarot-api/vercel.json
@@ -1,22 +1,3 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "app.js",
-      "use": "@now/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "^/api/v1/(.*)$",
-      "dest": "/api/v1/$1"
-    },
-    {
-      "src": ".*",
-      "dest": "/app.js"
-    }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  "rewrites": [{ "source": "/(.*)", "destination": "/app.js" }]
 }
