--- a/tarot-api/vercel.json
+++ b/tarot-api/vercel.json
@@ -1,3 +1,3 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/app.js" }]
+  "rewrites": [{ "source": "/(.*)", "destination": "./app.js" }]
 }
