--- a/tarot-api/vercel.json
+++ b/tarot-api/vercel.json
@@ -1,3 +1,20 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "./app.js" }]
+  "rewrites": [{ "source": "/(.*)", "destination": "./app.js" }],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Credentials", "value": "true" },
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Origin,X-Requested-With,Content-Type,Accept,content-type,application/json"
+        }
+      ]
+    }
+  ]
 }
