--- a/tarot-api/vercel.json
+++ b/tarot-api/vercel.json
@@ -12,7 +12,7 @@
         },
         {
           "key": "Access-Control-Allow-Headers",
-          "value": "Origin,X-Requested-With,Content-Type,Accept,content-type,application/json"
+          "value": "Origin,X-Requested-With,Content-Type,Accept,content-type,application/json,XMLHttpRequest"
         }
       ]
     }
