--- a/tarot-api/vercel.json
+++ b/tarot-api/vercel.json
@@ -1,11 +1,13 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "./app.js" }],
+  "rewrites": [
+    { "source": "/api/v1/(.*)", "destination": "./app.js" }
+  ],
   "headers": [
     {
-      "source": "/(.*)",
+      "source": "/api/v1/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
-        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Origin", "value": "http://localhost:5173" },
         {
           "key": "Access-Control-Allow-Methods",
           "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
