--- a/tarot-api/vercel.json
+++ b/tarot-api/vercel.json
@@ -1,10 +1,8 @@
 {
-  "rewrites": [
-    { "source": "/api/v1/(.*)", "destination": "/app.js" }
-  ],
+  "rewrites": [{ "source": "/(.*)", "destination": "./app.js" }],
   "headers": [
     {
-      "source": "/api/v1/(.*)",
+      "source": "/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Credentials", "value": "true" },
         { "key": "Access-Control-Allow-Origin", "value": "*" },
@@ -14,9 +12,9 @@
         },
         {
           "key": "Access-Control-Allow-Headers",
-          "value": "Origin,X-Requested-With,Content-Type,content-type,application/json,XMLHttpRequest,Accept, Accept-Language, Content-Language, Content-Type"
+          "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, x-auth-token"
         }
       ]
     }
-  ]
+  ],
 }
