--- a/tarot-api/vercel.json
+++ b/tarot-api/vercel.json
@@ -8,7 +8,7 @@
         { "key": "Access-Control-Allow-Origin", "value": "*" },
         {
           "key": "Access-Control-Allow-Methods",
-          "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
+          "value": "*"
         },
         {
           "key": "Access-Control-Allow-Headers",
