--- a/tarot-api/vercel.json
+++ b/tarot-api/vercel.json
@@ -1,2 +1,15 @@
 
-
+{
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        { "key": "Access-Control-Allow-Credentials", "value": "true" },
+        { "key": "Access-Control-Allow-Methods", "value": "GET,PUT,POST,DELETE,OPTIONS" },
+        { "key": "Access-Control-Allow-Headers", "value": "*" }
+      ],
+      "destination": "/app.js"
+    }
+  ]
+}
