--- a/tarot-api/vercel.json
+++ b/tarot-api/vercel.json
@@ -1,5 +1,6 @@
 
 {
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }],
   "headers": [
     {
       "source": "/(.*)",
@@ -10,6 +11,5 @@
         { "key": "Access-Control-Allow-Headers", "value": "*" }
       ]
     }
-  ],
-  "rewrites": [{"destination": "/app.js"}]
+  ]
 }
