--- a/tarot-api/vercel.json
+++ b/tarot-api/vercel.json
@@ -1,6 +1,6 @@
 
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }],
+  "rewrites": [{ "source": "/(.*)", "destination": "/api" }],
   "headers": [
     {
       "source": "/(.*)",
