--- a/tarot-api/package.json
+++ b/tarot-api/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
 
-    "start": "NODE_ENV=production node ./dist/index.js"
+    "start": "NODE_ENV=production node ./api/index.js"
 
   },
   "author": "ekelen",
