--- a/tarot-api/package.json
+++ b/tarot-api/package.json
@@ -4,7 +4,10 @@
   "description": "Simple REST API for the tarot cards of the Rider-Waite-Smith deck.",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon ./api/index.js"
+    "start-dev": "npx nodemon exec babel-node index.js",
+    "dev": "npm run start-dev",
+    "start": "NODE_ENV=production node ./dist/index.js",
+    "build": "rm -rf ./dist && NODE_ENV=production ./node_modules/@babel/cli/bin/babel.js index.js -d ./dist"
   },
   "author": "ekelen",
   "license": "ISC",
