--- a/tarot-api/package.json
+++ b/tarot-api/package.json
@@ -7,7 +7,7 @@
     "start-dev": "npx nodemon exec babel-node index.js",
     "dev": "npm run start-dev",
     "start": "NODE_ENV=production node ./dist/index.js",
-    "build": "rm -rf ./dist && NODE_ENV=production ./node_modules/@babel/cli/bin/babel.js index.js -d ./dist"
+    "build": "rm -rf ./dist && NODE_ENV=production ./node_modules/@babel/cli/bin/babel.js ./api/index.js -d ./dist"
   },
   "author": "ekelen",
   "license": "ISC",
