--- a/tarot-api/package.json
+++ b/tarot-api/package.json
@@ -2,9 +2,9 @@
   "name": "rws-cards-api",
   "version": "2.0.0",
   "description": "Simple REST API for the tarot cards of the Rider-Waite-Smith deck.",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start-dev": "npx nodemon exec babel-node index.js",
+    "start-dev": "npx nodemon exec babel-node ./api/index.js",
     "dev": "npm run start-dev",
     "start": "NODE_ENV=production node ./dist/index.js",
     "build": "rm -rf ./dist && NODE_ENV=production ./node_modules/@babel/cli/bin/babel.js ./api/index.js -d ./dist"
