--- a/tarot-api/vercel.json
+++ b/tarot-api/vercel.json
@@ -11,5 +11,8 @@
         { "key": "Access-Control-Allow-Headers", "value": "*" }
       ]
     }
-  ]
+  ],
+  "github": {
+    "enabled": false
+  }
 }
