--- a/Client/package.json
+++ b/Client/package.json
@@ -23,6 +23,7 @@
     "joi": "^17.12.0",
     "joi-password-complexity": "^5.2.0",
     "quill": "^1.3.7",
+    "quill-image-resize-module": "^3.0.0",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
@@ -32,6 +33,7 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.20.1",
     "react-slick": "^0.29.0",
     "reacticon": "^0.0.1",
